--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  camera: ^0.9.2+1
+  camera: ^0.9.4+1
   video_player: ^2.1.10
   flutter_bloc: ^7.1.0
+  permission_handler: ^8.1.4+2
+  path_provider: ^2.0.3
+  path: ^1.8.0
+  sizer: ^2.0.15
+  photo_manager: ^1.3.2
+  equatable: ^2.0.3
+  photo_view: ^0.12.0
+  photo_gallery: ^1.0.1
+  carousel_slider: ^4.0.0
+  
 dev_dependencies:
+   
   flutter_test:
     sdk: flutter
 
