--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
-    ext.kotlin_version = '1.5.30'
+    ext.kotlin_version = '1.5.31'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+    maven { url 'https://repo1.maven.org/maven2' }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:3.5.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -14,7 +15,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+            maven { url 'https://repo1.maven.org/maven2' }
     }
 }
 
@@ -27,3 +29,4 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+ 
