--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -29,18 +29,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   camera: ^0.9.4+1
-  video_player: ^2.1.10
+  video_player: ^2.2.5
   flutter_bloc: ^7.3.0
   permission_handler: ^8.1.4+2
   path_provider: ^2.0.3
   path: ^1.8.0
   sizer: ^2.0.15
-  photo_manager: ^1.3.2
   equatable: ^2.0.3
   photo_view: ^0.12.0
   photo_gallery: ^1.0.1
   carousel_slider: ^4.0.0
-  
+  volume_control: ^0.1.5
+  rwa_deep_ar: ^0.0.12
 dev_dependencies:
    
   flutter_test:
@@ -57,6 +57,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/android/
+    - assets/ios/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
