--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   carousel_slider: ^4.0.0
   volume_control: ^0.1.5
   rwa_deep_ar: ^0.0.12
+  badges: ^2.0.1
 dev_dependencies:
    
   flutter_test:
