--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  camera: ^0.9.4+1
   video_player: ^2.2.5
   flutter_bloc: ^7.3.0
-  permission_handler: ^8.1.4+2
+  permission_handler: ^8.3.0
   path_provider: ^2.0.3
   path: ^1.8.0
   sizer: ^2.0.15
   equatable: ^2.0.3
-  photo_view: ^0.12.0
   photo_gallery: ^1.0.1
   carousel_slider: ^4.0.0
   volume_control: ^0.1.5
@@ -59,7 +57,9 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/android/
+    - assets/android/masks/
+    - assets/android/filters/
+    - assets/android/effects/
     - assets/ios/
   # To add assets to your application, add an assets section, like this:
   # assets:
