Permission handler problem has been fixed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   volume_control: ^0.1.5
   rwa_deep_ar: ^0.0.12
   badges: ^2.0.1
+  device_info_plus: ^3.1.1
 dev_dependencies:
    
   flutter_test:
